fix(OutputDisplay.jsx) overflow height and height + width open close

--- a/src/components/parts/OpenCloseBox/OpenCloseBox.css
+++ b/src/components/parts/OpenCloseBox/OpenCloseBox.css
@@ -90,7 +90,7 @@
 	width: 100%;  
 	background: pink;
 	border: 1px solid blue; /* makes content container take up space when closed */
-	transition: height 4s;
+	transition: height 2s;
 	box-sizing: border-box;
 	overflow: visible; 
 } 
