--- a/src/components/parts/OutputDisplay.css
+++ b/src/components/parts/OutputDisplay.css
@@ -1,7 +1,7 @@
 .output-display {
 	min-width: 12px;
   min-height: 12px; 
-	height: 100%; 
+	height: 100%;  
 	background: #272727;
 	position: relative;
 	border: 0.5em solid #E8E4E4;
@@ -10,40 +10,43 @@
 	overflow: hidden;
 }
 
-.output-display-opening {
-	max-height: 100%;
+.output-display-opening-x { 
+	height: 0 !important; 
 }
 
-.output-display-open {
-	max-height: 100%;
+.output-display-opening-y { 
+	transition: height 2s;
+}
+
+.output-display-open-y {  
 	resize: both; 
 }
 
-.output-display-closing {
+.output-display-closing-x {
 	transition: width 2s, height 2s;
 	resize: none; 
 	background: red;
 }
 
-.output-display-closing-width {
+.output-display-closing-x-width {
 	max-width: 100%;
 }
 
-.output-display-closing-width-overflow {
+.output-display-closing-x-width-overflow {
 	width: 0 !important;
 	min-width: 100%;  
 }
 
-.output-display-closing-height {
+.output-display-closing-x-height {
 	max-height: 100%;
 }
 
-.output-display-closing-height-overflow {
+.output-display-closing-x-height-overflow {
 	height: 0 !important;
 	min-height: 100%; 
 }
 
-.output-display-closed {    
+.output-display-closed-x {    
 	max-width: 100%;
 	max-height: 100%;
 	resize: none; 
